--- a/roles/docker/tasks/centos7.yml
+++ b/roles/docker/tasks/centos7.yml
@@ -4,3 +4,6 @@
 
 - name: install docker
   yum: name=docker state=present
+
+- name: stop firewalld
+  service: name=firewalld state=stopped enabled=no
