--- a/roles/docker_tls_setup/meta/main.yml
+++ b/roles/docker_tls_setup/meta/main.yml
@@ -132,5 +132,5 @@ dependencies:
   # List your role dependencies here, one per line.
   # Be sure to remove the '[]' above if you add dependencies
   # to this list.
-  - { role: tls }
+  - { role: tls_setup }
   
