--- a/docker_install_tls.yml
+++ b/docker_install_tls.yml
@@ -2,6 +2,8 @@
 - hosts: all
   connection: ssh
   remote_user: "{{ docker_user }}"
+  vars_files:
+      - vars/docker.yml
   roles:
       - { role: common_setup, sudo: yes }
       - { role: docker, sudo: yes }
