--- a/roles/common_setup/tasks/main.yml
+++ b/roles/common_setup/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 # tasks file for common_setup
-- name: upgrade all packages
-  yum: name=* state=latest 
+#- name: upgrade all packages
+  #yum: name=* state=latest 
 
 - name: install selinux bindings
   yum: name=libselinux-python state=present
