disabled the virt7 repo by default

--- a/roles/docker/tasks/centos7.yml
+++ b/roles/docker/tasks/centos7.yml
@@ -3,7 +3,7 @@
   copy: src=virt7-testing.repo dest={{ yum_repo_folder }}
 
 - name: install docker
-  yum: name=docker state=present
+  yum: name=docker state=present enablerepo=virt7-testing
 
 - name: stop firewalld
   service: name=firewalld state=stopped enabled=no
